[package]
name = "merkle-tree"
version = "0.1.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
tiny-keccak = "1.4"
blake2-rfc = "0.2.18"

[dev-dependencies]
proptest = "0.8"

[features]
default = []
sha3 = []
blake2b = []
