[package]
name = "merkle-cbt"
version = "0.1.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

description = "A library for generating efficient Merkle tree and combined Merkle proof based on complete binary tree"
repository = "https://github.com/nervosnetwork/merkle-tree"
readme = "README.md"
keywords = ["merkle", "proof"]
categories = ["algorithms", "data-structures"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
tiny-keccak = "1.4"
blake2-rfc = "0.2.18"

[dev-dependencies]
proptest = "0.8"

[features]
default = []
sha3 = []
blake2b = []
