[package]
name = "merkle-cbt"
version = "0.2.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

description = "A library for generating efficient Merkle tree and combined Merkle proof based on complete binary tree"
repository = "https://github.com/nervosnetwork/merkle-tree"
readme = "README.md"
keywords = ["merkle", "proof"]
categories = ["algorithms", "data-structures"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
proptest = "0.8"

[dependencies]
cfg-if = "0.1"

[features]
default = ["std"]
std = []
